Make ChannelPromiseNotifier.cascadeChannel take void promises by default
And let the overload generalise over result types, and take an explicit result to use on success.